@@ -3449,20 +3449,21 @@
     };
 
     Sao.common.get_input_data = function(input, callback, char_) {
-        function read(file) {
-            var reader = new FileReader();
-            reader.onload = function() {
-                var value = new Uint8Array(reader.result);
-                if (char_) {
-                    value = String.fromCharCode.apply(null, value);
-                }
-                callback(value, file.name);
-            };
-            reader.readAsArrayBuffer(file);
-        }
         for (var i = 0; i < input[0].files.length; i++) {
-            read(input[0].files[i]);
+            Sao.common.get_file_data(input[0].files[i], callback, char_);
         }
+    };
+
+    Sao.common.get_file_data = function(file, callback, char_) {
+        var reader = new FileReader();
+        reader.onload = function() {
+            var value = new Uint8Array(reader.result);
+            if (char_) {
+                value = String.fromCharCode.apply(null, value);
+            }
+            callback(value, file.name);
+        };
+        reader.readAsArrayBuffer(file);
     };
 
     Sao.common.ellipsize = function(string, length) {
